--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "exif-parser": "^0.1.12",
     "express": "^4.16.4",
-    "cors": "^2.8.5"
+    "fileupload": "^1.0.0",
+    "multer": "^1.4.5-lts.1"
   },
   "repository": {
     "type": "git",
